test_src/compiler_errors/types/boolean/OrNumberError1.b
class OrNumberError1 {
    void test() {
        println(1 || false);
    }
}
